refactored with factories

--- a/browser/index.html
+++ b/browser/index.html
@@ -28,7 +28,7 @@
       <div class="col-xs-10">
         <div class="album" ng-controller="AlbumCtrl">
           <p>
-            <h3>{{ album.name }}</h3>
+            <h3>{{ album.name }} ({{ fullDuration }})</h3>
             <img ng-src="{{ album.imageUrl }}" class="img-thumbnail">
           </p>
           <table class='table'>
