last commit @ 5:41pm

--- a/browser/index.html
+++ b/browser/index.html
@@ -26,7 +26,7 @@
       </div>
 
       <div class="col-xs-10">
-        <div class="album" ng-controller="AlbumCtrl">
+        <div class="album" ng-controller="AlbumCtrl" ng-show="true">
           <p>
             <h3>{{ album.name }} ({{ fullDuration }})</h3>
             <img ng-src="{{ album.imageUrl }}" class="img-thumbnail">
@@ -54,6 +54,24 @@
             </tbody>
           </table>
         </div>
+
+        <div ng-show="false" ng-controller="AlbumsCtrl">
+          <h3>Albums</h3>
+          <div class="row">
+            <div class="col-xs-4" ng-repeat="album in albums">
+              <a class="thumbnail" href="#">
+                <img ng-src="{{ album.imageUrl }}">
+                <div class="caption">
+                  <h5>
+                    <span>{{ album.name }}</span>
+                  </h5>
+                  <small>Number of songs: {{ album.songs.length }}</small>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+
       </div>
 
       <footer>
